--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
+    "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
@@ -42,7 +43,6 @@
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
-    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.5",
     "sweetalert": "^2.1.2",
