--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
+    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.7.2",
     "canvas": "^2.11.2",
     "chart.js": "^4.4.6",
@@ -34,6 +35,7 @@
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.1.2",
     "react-icons": "^4.12.0",
