--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
     "@studio-freight/lenis": "^1.0.42",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "canvas": "^2.11.2",
     "chart.js": "^4.4.6",
@@ -44,6 +45,7 @@
     "react-parallax": "^3.5.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
+    "react-scroll-parallax": "^3.4.5",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
