--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^15.1.2",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.16.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
